# app/Http/Controllers/API/BaseController.php
@@ -13,11 +13,11 @@ class BaseController extends Controller
    */
   public function sendSuccess($message, $data = [], $status = 200){
     $response = [
-          'status' => $status,
-          'message' => $message,
-          'data' => $data,
-      ];
-      return response()->json($response, $status);
+      'status' => $status,
+      'message' => $message,
+      'data' => $data,
+    ];
+    return response()->json($response, 200);
   }
   /**
    * return error response.
@@ -26,12 +26,56 @@ class BaseController extends Controller
    */
   public function sendError($message, $data = [], $status = 400){
     $response = [
-          'status' => $status,
-          'message' => $message,
-      ];
-      if(!empty($data)){
-          $response['data'] = $data;
+      'status' => $status,
+      'message' => $message,
+    ];
+    if(!empty($data)){
+      $response['data'] = $data;
+    }
+    return response()->json($response, $status);
+  }
+  //Send mail
+  public function sendMail($to, $cc, $subject, $content) {
+    require base_path("vendor/autoload.php");
+    $mail = new PHPMailer(true);   // Passing `true` enables exceptions
+    $mail->CharSet = "UTF-8";
+    try {
+      // Email server settings
+      $mail->SMTPDebug = 0;
+      $mail->isSMTP();
+      $mail->Host = env('MAIL_HOST');           	// smtp host
+      $mail->SMTPAuth = true;
+      $mail->Username = env('MAIL_USERNAME');   		// sender username
+      $mail->Password = env('MAIL_PASSWORD');    // sender password
+      $mail->SMTPSecure = "ssl";              // encryption - ssl/tls
+      $mail->Port = env('MAIL_PORT');            // port - 587/465
+      $mail->timeout = null;
+      $mail->Encoding = 'base64';
+
+      $mail->setFrom(env('MAIL_USERNAME'), env('MAIL_FROM_NAME')); // sender email and name
+      $mail->addAddress($to);
+      if ($cc != '') {
+        foreach($cc as $email):
+          $mail->AddCC($email);
+        endforeach;
       }
-      return response()->json($response, $status);
+      $mail->addReplyTo(env('MAIL_USERNAME'), env('MAIL_FROM_NAME')); // sender email and name);
+      $mail->SMTPOptions = [
+        'ssl' => [
+          'verify_peer' => false,
+          'verify_peer_name' => false,
+          'allow_self_signed' => false
+        ]
+      ];
+      $mail->isHTML(true);                	// Set email content format to HTML
+      $mail->Subject = $subject;
+      $mail->Body = $content;
+      if ($mail->send())
+        Log::info('SendMail - Success : Email has been sent.');
+      else
+        Log::warning('SendMail - Failed : ' . $mail->ErrorInfo);
+    } catch(Exception $e) {
+      Log::warning('SendMail - Error : ' . $e->getMessage());
+    }
   }
 }
