# resources/lang/en/message.php
@@ -2,12 +2,24 @@
 
 return [
     //Users
+    'mr' => "Mr.",
+    'mrs' => "Mrs",
     'authsucc' => "Authentication completed successfully.",
     'autherr' => "Authentication failure.",
     'noprofil' => "No profile available for this user.",
     'nomenu' => "No menu available for this user.",
     'logoutsucc' => "Logout successfully completed.",
     'logouterr' => "Error while logging out.",
+
+    //Password
+    'forgotpwd' => "Forgot password.",
+    'otp' => "The OTP code is",
+
+    // Mail
+    'dear' => "Dear",
+    'bestregard' => "Best regards",
+    'sendmailsucc' => "Mail sent successfully.",
+    'sendmailerr' => "Error sending email.",
 
     // Message
     'error' => "An error has occurred, please try again later !",
