# resources/lang/fr/message.php
@@ -2,12 +2,24 @@
 
 return [
     //Users
+    'mr' => "M.",
+    'mrs' => "Mme",
     'authsucc' => "Authentification effectuée avec succès.",
     'autherr' => "Echec d'authentification.",
     'noprofil' => "Aucun profil disponible pour cet utilisateur.",
     'nomenu' => "Aucun menu disponible pour cet utilisateur.",
     'logoutsucc' => "Déconnexion éffectuée avec succès.",
     'logouterr' => "Erreur lors de la déconnexion.",
+
+    //Password
+    'forgotpwd' => "Mot de passe oublié.",
+    'otp' => "Le code OTP est",
+
+    // Mail
+    'dear' => "Cher(e)",
+    'bestregard' => "Cordialement",
+    'sendmailsucc' => "Mail envoyé avec succès.",
+    'sendmailerr' => "Erreur d'envoi de mail.",
 
     // Message
     'error' => "Une erreur est survenue, veuillez réessayer plus tard !",
